--- a/client/style/registerStyle.css
+++ b/client/style/registerStyle.css
@@ -3,7 +3,7 @@
 }
 .logo{
 	width: 80%;
-    height: 50px;
+    height: 70px;
     text-align: left;
 }
 #info input{
